unpackaged/main/default/objects/Plant_Product_Transaction__c/Plant_Product_Transaction__c.object-meta.xml
<CustomObject>
    <label>Plant Product Transaction</label>
    <nameField>
        <label>Plant Product Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Product Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>