unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Plant Product Transactions</relationshipLabel>
    <relationshipName>Plant_Product_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>