unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Plant Product Transactions</relationshipLabel>
    <relationshipName>Plant_Product_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>